resources/public/css/style.css
/* some style */

:root {
  --main-green: #5cdb95;
  --darker-green: #4da976;
  --main-red: #b95141;
  --darker-red: #973b2e;
  --main-blue: #5cdb95;
  --darker-blue: #4da976;
  /* --main-blue: #6c8fcc; */
  /* --darker-blue: #4179b9; */
}

html,
body,
#app,
#component {
  width: 100%;
  height: 100%;
  overflow: hidden;
  margin: 0;
  padding: 0;
  font: normal 1em Verdana, Arial, sans-serif;
}

.green {
  background: linear-gradient(
    0deg,
    var(--darker-green) 0%,
    var(--main-green) 30%,
    var(--main-green) 100%
  );
}

.red {
  background: linear-gradient(
    0deg,
    var(--darker-red) 0%,
    var(--main-red) 30%,
    var(--main-red) 100%
  );
}

.blue {
  background: linear-gradient(
    0deg,
    var(--darker-blue) 0%,
    var(--main-blue) 30%,
    var(--main-blue) 100%
  );
}

p {
  font-size: 2em;
  color: #333333;
}

#score {
  position: absolute;
  top: 1em;
  left: 1em;
  margin: 0;
  padding: 0;
}

#highscore {
  position: absolute;
  top: 1em;
  right: 1em;
  margin: 0;
  padding: 0;
}

#gameover {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translateX(-50%);
}

#startscreen {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translateX(-50%);
}

#instructions {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

#current-pair {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translateX(-50%);
}

#buttons {
  position: absolute;
  bottom: 1em;
  left: 50%;
  transform: translateX(-50%);
}

#first,
#middle,
#last {
  float: left;
  font-size: 4em;
  margin: 10px;
  padding: 10px;
}
#first,
#last {
  border: 1px solid black;
  border-radius: 5px;
  background: white;
}

input[type='button'] {
  border: none;
  color: grey;
  padding: 12px 16px;
  font-size: 16px;
  cursor: pointer;
  /* background-image: url('http://alexfeds.com/wp-content/uploads/2018/04/save_icon.svg'); */
  background-repeat: repeat-y;
}

